--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Awesome Books</title>
 </head>
 <body>
+    <h1>Awesome Books</h1>
+    <div id="new-books"></div>
+    <form action="">
+        <input type="text" id="book-title" placeholder="Title"> <br> <br>
+        <input type="text" id="book-author" placeholder="Author"> <br>  <br>
+        <button id="add-btn" type="button">Add</button>
+    </form>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
