--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <title>Awesome Books</title>
 </head>
 <body>
-    <h1>Awesome Books</h1>
-    <div id="new-books"></div>
-    <form action="">
-        <input type="text" id="book-title" placeholder="Title"> <br> <br>
-        <input type="text" id="book-author" placeholder="Author"> <br>  <br>
-        <button id="add-btn" type="button">Add</button>
-    </form>
+    <div id="main">
+        <h1>All awesome books</h1>
+        <div id="new-books"></div>
+        <hr>
+        
+        <h2>Add a new book</h2>
+        <form action="">
+            <input id="book-title" placeholder="Title" type="text">
+            <input id="book-author" placeholder="Author" type="text">
+            <button id="add-btn" type="button">Add</button>
+        </form>
+    </div>
 
     <script src="script.js"></script>
     
